style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');

:root {
    --overlay-color: #03a9f4; 
}

* {
    box-sizing:border-box;
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

.showcase {
    position: absolute;
    right: 0;
    width: 100%;
    min-height: 100vh;
    padding: 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #111;
    color: #fff;
    z-index: 2;
    transition: 0.5s;
}

.showcase.active {
    right: 300px;
}

.showcase header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 40px 100px;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    text-transform: uppercase;
    cursor: pointer;
}

.toggle {
    position: relative;
    width: 40px;
    height: 30px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.toggle span {
    display: block;
    width: 100%;
    height: 3px;
    background: #fff;
    border-radius: 2px;
    transition: 0.4s;
    transform-origin: center;
}

.toggle.active span:nth-child(1) {
    transform: translateY(13.5px) rotate(45deg);
    background: #fff;
}

.toggle.active span:nth-child(2) {
    opacity: 0;
}

.toggle.active span:nth-child(3) {
    transform: translateY(-13.5px) rotate(-45deg);
    background: #fff;
}

.showcase video {
    position: absolute;
    top: 100px;
    left: 0;
    width: 100%;
    height: calc(100% - 100px);
    object-fit: contain;
    opacity: 0.8;
}

.video-mobile {
    display: none;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.text {
    position: relative;
    z-index: 10;
}

.text h3{
    font-size: 4em;
    font-weight: 800;
    line-height: 1em;
}

.text h4{
    font-size: 3em;
    font-weight: 600;
    line-height: 1em;
    margin: 25px 50px 75px 40px;
}

.text a {
    display: inline-block;
    font-size: 1em;
    background: #fff;
    padding: 10px 30px;
    text-decoration: none;
    color: #111;
    margin-top: 10px;
    text-transform: uppercase;
    letter-spacing: 2px;
    transition: 0.2s;
}

.text a:hover {
    letter-spacing: 6px;
}

.social {
    position: absolute;
    bottom: 20px;
    z-index: 10;
    display: flex;
    justify-content: center;
    align-items: center;
}

.social li {
    list-style: none;
}

.social li a {
    display: inline-block;
    filter: invert(1);
    margin-right: 20px;
    transform: scale(0.7);
    transition: 0.5s;
}

.social li a:hover {
    transform: scale(0.5) translateY(-15px); 
}

.menu {
    position: absolute;
    top: 0;
    right: 0;
    width: 300px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.menu ul {
    position: relative;
    list-style: none;
}

.menu ul li a {
    text-decoration: none;
    font-size: 24px;
    color: #555;
}

@media (prefers-color-scheme: dark) {
    .menu ul li a {
        color: #ccc;
    }
}

.menu ul li a:hover {
    color: var(--overlay-color);
}

@media (max-width: 798px) {
    .showcase,
    .showcase header {
        padding: 40px;
    }

    .text h2 {
        font-size: 3em;
    }

    .text h3 {
        font-size: 2em;
    }

    .video-desktop {
        display: none;
    }

    .video-mobile {
        display: block;
        top: 0;
        height: 100%;
        object-fit: cover;
    }
}
    

